add muted attribute

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<script src="./scripts/resize.js"></script>
 	</head>
 	<body class="landing-page">
-		<video class="bgplayer" src="./src/bcg_video.mp4" autoplay loop></video>
+		<video class="bgplayer" src="./src/bcg_video.mp4" autoplay loop muted></video>
 		<div class="left-sidebar">
 			<div class="show-left-sidebar"></div>
 			<div class="left-sidebar-menu"></div>
